Add Wait on for Async startup and test running

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,7 +165,7 @@ commands:
       - db-setup
       - run:
           name: start server
-          command: RUBYOPT=-W:no-deprecated bundle exec puma
+          command: yarn run start:server
       - run:
           name: Run Cypress tests
           command: yarn run cypress:run
