--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,7 +165,7 @@ commands:
       - db-setup
       - run:
           name: start server
-          command: yarn run start:server
+          command: yarn run start:testserver
       - run:
           name: Run Cypress tests
           command: yarn run cypress:run
