--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,6 +170,9 @@ commands:
           name: install cypress
           command: yarn install --frozen-lockfile
       - run:
+          name: cypress install
+          command: cypress install
+      - run:
           name: Run Cypress tests
           command: yarn run cypress:run
 
