Update test README.md to include running cypress testing
Update the circleci config variable cypress to cypress-runner in case there's a name clash with a cypress orb that we might include in future.

Update the makefile with a new command to run cypress tests.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,7 +160,7 @@ commands:
           path: /tmp/test-results
           destination: test-results
 
-  cypress:
+  cypress-runner:
     steps:
       - db-setup
       - run:
@@ -249,7 +249,7 @@ jobs:
     steps:
       - checkout
       - build-base
-      - cypress
+      - cypress-runner
     environment:
       CYPRESS_baseUrl: http://localhost:9292
 
