Add names to cypress/run jobs for each environment
Add a name to each cypress/run job for each environment it runs on.

Also, test to see what happens if there is no caching of the node_modules and instead just the yarn.lock

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,8 @@ references:
     save_cache:
       key: v5-yarn-{{ checksum "yarn.lock" }}
       paths:
-        - node_modules
         - public/packs-test
-        - ~/.cache
+        - ~/.cache/yarn
 
   _attach-tmp-workspace: &attach-tmp-workspace
     attach_workspace:
@@ -408,6 +407,7 @@ workflows:
           requires:
             - hold-dev
       - cypress/run:
+          name: Cypress dev tests
           executor: cypress-dev-executor
           yarn: true
           requires:
@@ -421,6 +421,7 @@ workflows:
           requires:
             - hold-staging
       - cypress/run:
+          name: Cypress staging tests
           executor: cypress-staging-executor
           yarn: true
           requires:
@@ -434,6 +435,7 @@ workflows:
           requires:
             - hold-uat
       - cypress/run:
+          name: Cypress uat tests
           executor: cypress-uat-executor
           yarn: true
           requires:
