Add Rogue IP addresses to deny list

--- a/.k8s/uat/ingress.yaml
+++ b/.k8s/uat/ingress.yaml
@@ -3,6 +3,13 @@ kind: Ingress
 metadata:
   name: laa-court-data-ui-app-ingress
   namespace: laa-court-data-ui-uat
+  annotations:
+    nginx.ingress.kubernetes.io/server-snippet: |-
+      location / {
+        deny 223.178.211.9;
+        deny 143.244.161.10;
+        deny 206.72.194.213;
+      }
 spec:
   rules:
     - host: uat.view-court-data.service.justice.gov.uk
