--- a/.k8s/staging/ingress.yaml
+++ b/.k8s/staging/ingress.yaml
@@ -3,6 +3,11 @@ kind: Ingress
 metadata:
   name: laa-court-data-ui-app-ingress
   namespace: laa-court-data-ui-staging
+  annotations:
+    nginx.ingress.kubernetes.io/server-snippet: |
+        deny 223.178.211.9;
+        deny 143.244.161.10;
+        deny 206.72.194.213;
 spec:
   rules:
     - host: staging.view-court-data.service.justice.gov.uk
