--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   slack: circleci/slack@3.4.2
+  snyk: snyk/snyk@1.1.1
 
 references:
   _restore-bundle: &restore-bundle
@@ -137,6 +138,20 @@ commands:
           name: Run brakeman
           command: bundle exec brakeman
 
+  build-temp-image:
+    steps:
+      - run:
+          name: Compile Docker Image
+          command: |
+                docker build \
+                  --build-arg BUILD_DATE=$(date +%Y-%m-%dT%H:%M:%S%z) \
+                  --build-arg COMMIT_ID=${CIRCLE_SHA1} \
+                  --build-arg BUILD_TAG="app-${CIRCLE_SHA1}" \
+                  --build-arg APP_BRANCH=${CIRCLE_BRANCH} \
+                  --pull \
+                  --tag vcd:scan \
+                  --file docker/Dockerfile .
+
   rspec:
     steps:
       - db-setup
@@ -235,6 +250,23 @@ jobs:
           path: tmp/coverage
       - upload-coverage
 
+  scan-docker-image:
+    executor: test-executor
+    parallelism: 1
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 19.03.13
+      - build-base
+      - build-temp-image
+      - snyk/scan:
+          token-variable: SNYK_TOKEN
+          docker-image-name: vcd:scan
+          target-file: ./docker/Dockerfile
+          organization: 'legal-aid-agency'
+          severity-threshold: "high"
+          fail-on-issues: true
+
   build-app-container:
     executor: cloud-platform-executor
     steps:
@@ -325,6 +357,9 @@ workflows:
           requires:
             - build-test-container
       - rspec-tests:
+          requires:
+            - build-test-container
+      - scan-docker-image:
           requires:
             - build-test-container
 
