Update dependabot to update_weekly schedule
update the dependabot config to the update_schedule of weekly for bundler and npm updates

This reduces dependabot PRs bumping a version more than once a week.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
 - package-ecosystem: bundler
   directory: "/"
   schedule:
-    interval: daily
+    interval: weekly
     time: "03:00"
     timezone: Europe/London
   open-pull-requests-limit: 10
@@ -48,7 +48,7 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   schedule:
-    interval: daily
+    interval: weekly
     time: "03:00"
     timezone: Europe/London
   open-pull-requests-limit: 10
