--- a/.k8s/uat/ingress.yaml
+++ b/.k8s/uat/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: laa-court-data-ui-app-ingress
   namespace: laa-court-data-ui-uat
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: modsec01
     nginx.ingress.kubernetes.io/enable-modsecurity: "true"
     nginx.ingress.kubernetes.io/modsecurity-snippet: |
       SecRuleEngine On
