--- a/.k8s/production/ingress.yaml
+++ b/.k8s/production/ingress.yaml
@@ -4,6 +4,12 @@ metadata:
   name: laa-court-data-ui-app-ingress
   namespace: laa-court-data-ui-production
   annotations:
+    kubernetes.io/ingress.class: modsec01
+    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
+    nginx.ingress.kubernetes.io/modsecurity-snippet: |
+      SecRuleEngine On
+    external-dns.alpha.kubernetes.io/set-identifier: laa-court-data-ui-app-ingress-laa-court-data-ui-production-blue
+    external-dns.alpha.kubernetes.io/aws-weight: "100"
     nginx.ingress.kubernetes.io/server-snippet: |
         deny 223.178.211.9;
         deny 143.244.161.10;
