--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@ministryofjustice/frontend": "^0.2.6",
     "@rails/ujs": "^6.1.4",
     "@rails/webpacker": "5.4.3",
-    "govuk-frontend": "^3.14.0"
+    "govuk-frontend": "^3.14.0",
+    "wait-on": "^6.0.0"
   },
   "devDependencies": {
     "@webpack-cli/serve": "^1.6.0",
