--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -31,8 +31,7 @@ RUN apk --no-cache add --upgrade --virtual build-dependencies \
                   libxslt-dev \
                   postgresql-dev \
                   tzdata \
-                  runit \
-                  apk-tools
+                  runit
 
 # add non-root user and group with alpine first available uid, 1000
 RUN addgroup -g 1000 -S appgroup \
