--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ executors:
           RAILS_ENV: test
           DATABASE_URL: postgres://postgres:circleci@127.0.0.1:5432/laa_court_data_ui_test
           TZ: Europe/London
-      - image: cimg/postgres:11.6-alpine-ram
+      - image: cimg/postgres:11.13
         environment:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: "circleci"
