--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,7 +167,7 @@ commands:
                   --format RspecJunitFormatter \
                   --out /tmp/test-results/rspec.xml \
                   $TESTFILES
-                tmp/cc-test-reporter format-coverage -t simplecov -o "tmp/coverage/codeclimate.$CIRCLE_NODE_INDEX.json" coverage/backend/.resultset.json
+                tmp/cc-test-reporter format-coverage -t simplecov -o "tmp/coverage/codeclimate.$CIRCLE_NODE_INDEX.json" /home/circleci/repo/coverage/backend/.resultset.json
       - store_test_results:
           path: /tmp/test-results
       - store_artifacts:
