--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,7 +167,7 @@ commands:
                   --format RspecJunitFormatter \
                   --out /tmp/test-results/rspec.xml \
                   $TESTFILES
-                tmp/cc-test-reporter format-coverage coverage/.resultset.json -t simplecov -o "tmp/coverage/codeclimate.$CIRCLE_NODE_INDEX.json" -d
+                tmp/cc-test-reporter format-coverage -t simplecov -o "tmp/coverage/codeclimate.$CIRCLE_NODE_INDEX.json"
       - store_test_results:
           path: /tmp/test-results
       - store_artifacts:
