--- a/.k8s/live/dev/deployment-worker.yaml
+++ b/.k8s/live/dev/deployment-worker.yaml
@@ -27,12 +27,12 @@ spec:
           command: ['bundle', 'exec', 'sidekiq']
           readinessProbe:
             exec:
-              command: ['bundle', 'exec', 'sidekiqmon']
+              command: ['bundle', 'exec', 'rake', 'worker:healthcheck']
             initialDelaySeconds: 30
             periodSeconds: 30
           livenessProbe:
             exec:
-              command: ['bundle', 'exec', 'sidekiqmon']
+              command: ['bundle', 'exec', 'rake', 'worker:healthcheck']
             initialDelaySeconds: 30
             periodSeconds: 30
           env:
