--- a/.k8s/live/uat/deployment-worker.yaml
+++ b/.k8s/live/uat/deployment-worker.yaml
@@ -27,12 +27,12 @@ spec:
           command: ['bundle', 'exec', 'sidekiq']
           readinessProbe:
             exec:
-              command: ['sh', '-c', 'bundle exec sidekiqmon']
+              command: ['sh', '-c', "bundle exec sidekiqmon"]
             initialDelaySeconds: 20
             periodSeconds: 30
           livenessProbe:
             exec:
-              command: ['sh', '-c', 'bundle exec sidekiqmon']
+              command: ['sh', '-c', "bundle exec sidekiqmon"]
             initialDelaySeconds: 30
             periodSeconds: 60
           env:
