--- a/.k8s/live/uat/deployment-worker.yaml
+++ b/.k8s/live/uat/deployment-worker.yaml
@@ -26,13 +26,15 @@ spec:
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
           command: ['bundle', 'exec', 'sidekiq']
           readinessProbe:
-            exec:
-              command: ['sh', '-c', "bundle exec sidekiqmon"]
+            httpGet:
+              path: /
+              port: 7433
             initialDelaySeconds: 20
             periodSeconds: 30
           livenessProbe:
-            exec:
-              command: ['sh', '-c', "bundle exec sidekiqmon"]
+            httpGet:
+              path: /
+              port: 7433
             initialDelaySeconds: 30
             periodSeconds: 60
           env:
