--- a/.k8s/live/staging/deployment-worker.yaml
+++ b/.k8s/live/staging/deployment-worker.yaml
@@ -26,15 +26,17 @@ spec:
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
           command: ['bundle', 'exec', 'sidekiq']
           readinessProbe:
-            exec:
-              command: ['bundle', 'exec', 'sidekiqmon']
-            initialDelaySeconds: 15
-            periodSeconds: 10
-          livenessProbe:
-            exec:
-              command: ['bundle', 'exec', 'sidekiqmon']
-            initialDelaySeconds: 30
+            httpGet:
+              path: /
+              port: 7433
+            initialDelaySeconds: 20
             periodSeconds: 30
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 7433
+            initialDelaySeconds: 30
+            periodSeconds: 60
           env:
             - name: ENV
               value: 'staging'
@@ -95,12 +97,12 @@ spec:
             httpGet:
               path: /metrics
               port: 9394
-            initialDelaySeconds: 10
+            initialDelaySeconds: 60
             periodSeconds: 60
           readinessProbe:
             httpGet:
               path: /metrics
               port: 9394
-            initialDelaySeconds: 10
+            initialDelaySeconds: 60
             periodSeconds: 60
 
