--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "@webpack-cli/serve": "^1.6.0",
-    "cypress": "^8.7.0",
+    "cypress": "^9.4.1",
+    "cypress-axe": "^0.14.0",
     "standard": "^16.0.4",
     "stylelint": "^13.13.1",
     "stylelint-config-gds": "^0.1.0",
@@ -54,5 +55,8 @@
     "env": [
       "mocha"
     ]
+  },
+  "peerDependencies": {
+    "axe-core": "^4.4.0"
   }
 }
