Added basic usage of checkA11y Cypress test for sign in spec checks for accessibility issues on page visit
To do: Refactor so that we don't have to reproduce long task code on every spec

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "stylelint": "^13.13.1",
     "stylelint-config-gds": "^0.1.0",
     "stylelint-order": "^4.1.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "axe-core": "^4.4.0"
   },
   "resolutions": {
     "css-what": "^5.0.1",
@@ -55,8 +56,5 @@
     "env": [
       "mocha"
     ]
-  },
-  "peerDependencies": {
-    "axe-core": "^4.4.0"
   }
 }
