--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   slack: circleci/slack@3.4.2
-  snyk: snyk/snyk@1.1.1
+  snyk: snyk/snyk@1.844.0
   browser-tools: circleci/browser-tools@1.1
 
 references:
@@ -55,9 +55,9 @@ references:
 
   _script-build-app-container: &script-build-app-container
     run:
-        name: Build and push docker image
-        command: |
-          .circleci/build.sh
+      name: Build and push docker image
+      command: |
+        .circleci/build.sh
 
 # ------------------
 # EXECUTORS
@@ -144,14 +144,14 @@ commands:
       - run:
           name: Compile Docker Image
           command: |
-                docker build \
-                  --build-arg BUILD_DATE=$(date +%Y-%m-%dT%H:%M:%S%z) \
-                  --build-arg COMMIT_ID=${CIRCLE_SHA1} \
-                  --build-arg BUILD_TAG="app-${CIRCLE_SHA1}" \
-                  --build-arg APP_BRANCH=${CIRCLE_BRANCH} \
-                  --pull \
-                  --tag vcd:scan \
-                  --file docker/Dockerfile .
+            docker build \
+              --build-arg BUILD_DATE=$(date +%Y-%m-%dT%H:%M:%S%z) \
+              --build-arg COMMIT_ID=${CIRCLE_SHA1} \
+              --build-arg BUILD_TAG="app-${CIRCLE_SHA1}" \
+              --build-arg APP_BRANCH=${CIRCLE_BRANCH} \
+              --pull \
+              --tag vcd:scan \
+              --file docker/Dockerfile .
 
   rspec:
     steps:
@@ -159,16 +159,16 @@ commands:
       - run:
           name: Run rspec tests
           command: |
-                mkdir /tmp/test-results
-                tmp/cc-test-reporter before-build
-                TESTFILES=$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split)
-                RUBYOPT=-W:no-deprecated \
-                bundle exec rspec \
-                  --format progress \
-                  --format RspecJunitFormatter \
-                  --out /tmp/test-results/rspec.xml \
-                  $TESTFILES
-                tmp/cc-test-reporter format-coverage -t simplecov -o "tmp/coverage/codeclimate.$CIRCLE_NODE_INDEX.json"
+            mkdir /tmp/test-results
+            tmp/cc-test-reporter before-build
+            TESTFILES=$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split)
+            RUBYOPT=-W:no-deprecated \
+            bundle exec rspec \
+              --format progress \
+              --format RspecJunitFormatter \
+              --out /tmp/test-results/rspec.xml \
+              $TESTFILES
+            tmp/cc-test-reporter format-coverage -t simplecov -o "tmp/coverage/codeclimate.$CIRCLE_NODE_INDEX.json"
       - store_test_results:
           path: /tmp/test-results
       - store_artifacts:
@@ -269,7 +269,7 @@ jobs:
           token-variable: SNYK_TOKEN
           docker-image-name: vcd:scan
           target-file: ./docker/Dockerfile
-          organization: 'legal-aid-agency'
+          organization: "legal-aid-agency"
           severity-threshold: "high"
           fail-on-issues: true
 
