AAC-329 Setup accessibility testing and linting in Cypress (#874)
* Add cypress-axe and axe-core

Add cypress-axe as a yarn devDependency
Add axe-core as a yarn peerDependency of the cypress package

Add import 'cypress-axe' to the support file as it includes commands to be used in testing

* Added basic usage of checkA11y
Cypress test for sign in spec checks for accessibility issues on page visit

To do: Refactor so that we don't have to reproduce long task code on every spec

* Fix js linting issues

* Add Cypress command to log results to terminal

Add a terminal log command that logs cypress test results to the terminal.

Refactor code to move the function terminalLog into the above command.

Add initial rules to ignore the govuk-phase-banner accessiblity issue because it is Technial Debt

* Add accessiblity cypress checks on sign in

Add accessibility checks to the page load and dynamic changes on the page during the sign in cypress tests

* Added accessibility tests to cookie tests
Added axe a11y checks to cookie_settings and cookie_banner
Refactored runtime a11y checks into function composed of:
checkA11y and injectAxe for ease of use

* Added eslint for Javascript
Created config for eslint
Added Cypress eslint plugin
Linted all JS files in repo
Cleaned up test specs

* Changed validate:js command to ESLint
Ran linter on via command on app and cypress folder

* Update comment to ESLint from standardjs

* Upgrade ruby to 2.7.5

Upgrade ruby to 2.7.5 from 2.7.2

Upgrade circleci ruby docker imgae to 2.7.5 which comes with node version 16.13.0

This is so that the circleci docker image has the node of at least (^12.22.0, ^14.17.0, or >=16.0.0)  as described by ESlint.

This will allow for ESlint to be installed and work as our javascript linter

* Disable eslint error for cypress plugin/index.js

* Upgrade ruby to 2.7.5 in Dockerfile

* Fix bundle gems issue in docker

This is an issue with our docker alp

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.21.1",
   "scripts": {
-    "validate:js": "standard",
+    "validate:js": "eslint app cypress",
     "validate:scss": "stylelint **/*.scss",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
@@ -19,7 +19,11 @@
   },
   "devDependencies": {
     "@webpack-cli/serve": "^1.6.0",
-    "cypress": "^8.7.0",
+    "axe-core": "^4.4.0",
+    "cypress": "^9.4.1",
+    "cypress-axe": "^0.14.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "standard": "^16.0.4",
     "stylelint": "^13.13.1",
     "stylelint-config-gds": "^0.1.0",
