--- a/.k8s/live/uat/ingress.yaml
+++ b/.k8s/live/uat/ingress.yaml
@@ -27,9 +27,12 @@ spec:
       http:
         paths:
           - path: /
+            pathType: Prefix
             backend:
-              serviceName: laa-court-data-ui-app-service
-              servicePort: 80
+              service:
+                name: laa-court-data-ui-app-service
+                port: 
+                  number: 80
   tls:
     - hosts:
       - uat.view-court-data.service.justice.gov.uk
