Move to Ruby 3.1 Language version (#890)
* Move to Ruby 3.1 Language version

* Remove Simplecov.start from bin/rails

* fix linting in gem file

* Fix alpine version to avoid vulns

* Remove ingress warning

* Update team slug name

* revert change

* Fix v1 ingress path style

* Add missing gem

* Add missing gem

--- a/.k8s/live/production/ingress.yaml
+++ b/.k8s/live/production/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: laa-court-data-ui-app-ingress
@@ -27,9 +27,12 @@ spec:
       http:
         paths:
           - path: /
+            pathType: Prefix
             backend:
-              serviceName: laa-court-data-ui-app-service
-              servicePort: 80
+              service:
+                name: laa-court-data-ui-app-service
+                port: 
+                  number: 80
   tls:
     - hosts:
       - view-court-data.service.justice.gov.uk
