--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ministryofjustice/frontend": "^1.4.2",
     "@rails/ujs": "^7.0.3",
+    "@hotwired/turbo-rails": "^7.1.1",
     "@rails/webpacker": "5.4.3",
     "govuk-frontend": "^4.1.0",
     "jquery": "3.6.0",
