--- a/.k8s/live/staging/deployment.yaml
+++ b/.k8s/live/staging/deployment.yaml
@@ -120,6 +120,21 @@ spec:
                 secretKeyRef:
                   name: lcdui-secrets
                   key: SLACK_ALERTS_WEBHOOK
+            - name: COURT_DATA_API_URL
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: COURT_DATA_API_URL
+            - name: COURT_DATA_API_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: COURT_DATA_API_USERNAME
+            - name: COURT_DATA_API_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: COURT_DATA_API_SECRET
         - name: laa-court-data-ui-metrics
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
           imagePullPolicy: Always
