--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@rails/ujs": "^7.0.2",
     "@rails/webpacker": "5.4.3",
     "govuk-frontend": "^4.0.1",
-    "jquery": "3.6.0"
+    "jquery": "3.6.0",
+    "postcss": "^8.4.12"
   },
   "devDependencies": {
     "standard": "^16.0.4",
