Update tests env config file
Add CDAPI url as this is required for the activeresource calls to CDAPI.

Add the DEFENDANT_SEARCH environment variable to be used as a feature flag.

--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,8 @@ COURT_DATA_ADAPTOR_API_SECRET: test-app-secret
 COURT_DATA_ADAPTOR_API_TEST_MODE: true
 
 GA_TRACKING_ID: UA-XXXXXXXXX-XX
+
+# CDAPI
+COURT_DATA_API_URL: http://localhost:8000/v2
+DEFENDANTS_SEARCH: false
+LAA_REFERENCES: false
