--- a/.k8s/live/dev/deployment.yaml
+++ b/.k8s/live/dev/deployment.yaml
@@ -65,6 +65,8 @@ spec:
               value: enabled
             - name: DISPLAY_RAW_RESPONSES
               value: enabled
+            - name: LAA_REFERENCES
+              value: 'true'
             - name: COURT_DATA_ADAPTOR_API_UID
               valueFrom:
                 secretKeyRef:
