--- a/.k8s/live/staging/deployment.yaml
+++ b/.k8s/live/staging/deployment.yaml
@@ -63,6 +63,8 @@ spec:
               value: 'UA-131160087-16'
             - name: RAILS_LOG_TO_STDOUT
               value: enabled
+            - name: LAA_REFERENCES
+              value: 'true'
             - name: DISPLAY_RAW_RESPONSES
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
