Add hearing_summaries feature flag in .env.test

--- a/.env.test
+++ b/.env.test
@@ -9,3 +9,4 @@ GA_TRACKING_ID: UA-XXXXXXXXX-XX
 COURT_DATA_API_URL: http://localhost:8000/v2
 DEFENDANTS_SEARCH: false
 LAA_REFERENCES: false
+HEARING_SUMMARIES: false
