Ignore rubocop model association warning
This is because rubocop expects the model to be a ActiveRecord when it's ActiveResource, ignore the cd_api/ models
until a solution is found (TECHDEBT)

Clean up prosecution case model

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -105,6 +105,10 @@ Rails/EnvironmentVariableAccess:
 Rails/FilePath:
   Enabled: false
 
+Rails/HasManyOrHasOneDependent:
+  Exclude:
+   - app/models/cd_api/*
+
 Rails/HelperInstanceVariable:
   Exclude:
     - app/helpers/hearing_paginator.rb
